// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = false 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField0"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField0"
        onChange={[Function]}
        readOnly={true}
        type="text"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
    </div>
    <div
      className="copySection"
    >
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.copy.label"
        id="copyButtonTooltipHost2"
      >
        <CustomizedIconButton
          aria-labelledby="copyButtonTooltipHost2"
          componentRef={
            Object {
              "current": null,
            }
          }
          iconProps={
            Object {
              "iconName": "copy",
            }
          }
          onClick={[Function]}
        />
      </StyledTooltipHostBase>
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = true 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField3"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField3"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.toggleMask.label.show"
        id="toggleMaskButtonTooltipHost4"
      >
        <CustomizedIconButton
          aria-labelledby="toggleMaskButtonTooltipHost4"
          iconProps={
            Object {
              "iconName": "RedEye",
            }
          }
          onClick={[Function]}
        />
      </StyledTooltipHostBase>
    </div>
    <div
      className="copySection"
    >
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.copy.label"
        id="copyButtonTooltipHost5"
      >
        <CustomizedIconButton
          aria-labelledby="copyButtonTooltipHost5"
          componentRef={
            Object {
              "current": null,
            }
          }
          iconProps={
            Object {
              "iconName": "copy",
            }
          }
          onClick={[Function]}
        />
      </StyledTooltipHostBase>
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when allowMask = true 2`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField6"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection  readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField6"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.toggleMask.label.show"
        id="toggleMaskButtonTooltipHost7"
      >
        <CustomizedIconButton
          aria-labelledby="toggleMaskButtonTooltipHost7"
          iconProps={
            Object {
              "iconName": "RedEye",
            }
          }
          onClick={[Function]}
        />
      </StyledTooltipHostBase>
    </div>
    <div
      className="copySection"
    >
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.copy.label"
        id="copyButtonTooltipHost8"
      >
        <CustomizedIconButton
          aria-labelledby="copyButtonTooltipHost8"
          componentRef={
            Object {
              "current": null,
            }
          }
          iconProps={
            Object {
              "iconName": "copy",
            }
          }
          onClick={[Function]}
        />
      </StyledTooltipHostBase>
    </div>
  </div>
</div>
`;

exports[`MaskedCopyableTextField snapshots it matches snapshot when error message specified 1`] = `
<div
  className="maskedCopyableTextField"
>
  <div
    className="labelSection"
  >
    <Component
      htmlFor="maskedCopyableTextField9"
    >
      label1
    </Component>
  </div>
  <div
    className="controlSection"
  >
    <div
      className="borderedSection error readOnly"
    >
      <input
        aria-label="ariaLabel1"
        className="input"
        id="maskedCopyableTextField9"
        onChange={[Function]}
        readOnly={true}
        type="password"
        value="value1"
      />
      <input
        aria-hidden={true}
        className="input"
        readOnly={true}
        style={
          Object {
            "height": "1px",
            "opacity": 0,
            "position": "absolute",
            "width": "1px",
          }
        }
        tabIndex={-1}
        value="value1"
      />
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.toggleMask.label.show"
        id="toggleMaskButtonTooltipHost10"
      >
        <CustomizedIconButton
          aria-labelledby="toggleMaskButtonTooltipHost10"
          iconProps={
            Object {
              "iconName": "RedEye",
            }
          }
          onClick={[Function]}
        />
      </StyledTooltipHostBase>
    </div>
    <div
      className="copySection"
    >
      <StyledTooltipHostBase
        content="common.maskedCopyableTextField.copy.label"
        id="copyButtonTooltipHost11"
      >
        <CustomizedIconButton
          aria-labelledby="copyButtonTooltipHost11"
          componentRef={
            Object {
              "current": null,
            }
          }
          iconProps={
            Object {
              "iconName": "copy",
            }
          }
          onClick={[Function]}
        />
      </StyledTooltipHostBase>
    </div>
  </div>
  <div
    aria-live="assertive"
    className="errorSection"
  >
    error
  </div>
  <StyledAnnouncedBase
    message="error"
  />
</div>
`;
